@@ -37,6 +37,8 @@ Release date to be announced, codename to be decided.
 - Added :meth:`werkzeug.utils.import_module` function that does better
   error signalling than :meth:`werkzeug.utils.import_string` but does
   not solve attributes.
+- For conditional responses the content length is no longer set when it
+  is already there and added if missing.
 
 Version 0.7.2
 -------------
